1.BI报表训练清理旧配置取消词典维护，全量存入向量库，且取最多50个维度值到数据库dimvaluemaps字段。 2.取消从词典获取维度值相关逻辑，改为从数据库dimvaluemaps字段获取。 3.修改维度值导入，清理接口代码，不走词典逻辑。 4.取消keyword环节，mapping仅做向量召回。 5.取消词典重载，增量更新逻辑，使用开关控制